# chuk-mcp-geocoder

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  ROADMAP.md  SPEC.md  fly.toml  mypy.ini  pyproject.toml
.github/workflows/: publish.yml  release.yml  test.yml
config/: server.json
examples/: tool_runner.py
src/chuk_mcp_geocoder/: __init__.py  async_server.py  constants.py  server.py
src/chuk_mcp_geocoder/core/: __init__.py  geocoder.py  nominatim.py
src/chuk_mcp_geocoder/models/: __init__.py  responses.py
src/chuk_mcp_geocoder/tools/: __init__.py
src/chuk_mcp_geocoder/tools/batch/: __init__.py  api.py
src/chuk_mcp_geocoder/tools/discovery/: __init__.py  api.py
src/chuk_mcp_geocoder/tools/geocoding/: __init__.py  api.py
tests/: conftest.py  test_batch_tools.py  test_bbox_format.py  test_constants.py  test_discovery_tools.py  test_geocoder.py  test_geocoding_tools.py  test_models.py  test_nominatim.py  test_server.py
